@@ -7,6 +7,7 @@ installation-guide (2008xxxx) UNRELEASED; urgency=medium
   * Describe Orion and Versatile as supported platforms.
   * Fix the NSLU2 download link.
   * Describe MIPS Malta.
+  * Document netcfg/get_gateway=none
 
   [ Frans Pop ]
   * Update copyright to 2008.
